# author-style-ai-analysis

./: .gitattributes  .gitignore  README.md  authors.csv  pyproject.toml  requirements.txt
Authors_Stylometric_Signatures/alain-fournier/: alain-fournier_analysis.md
Authors_Stylometric_Signatures/alexandre_dumas/: alexandre_dumas_analysis.md
Authors_Stylometric_Signatures/alfred_de_vigny/: alfred_de_vigny_analysis.md
Authors_Stylometric_Signatures/alphonse_daudet/: alphonse_daudet_analysis.md
Authors_Stylometric_Signatures/anatole_france/: anatole_france_analysis.md
Authors_Stylometric_Signatures/andre_gide/: andre_gide_analysis.md
Authors_Stylometric_Signatures/charles_nodier/: charles_nodier_analysis.md
Authors_Stylometric_Signatures/emile_zola/: emile_zola_analysis.md
Authors_Stylometric_Signatures/françois_mauriac/: françois_mauriac_analysis.md
Authors_Stylometric_Signatures/george_sand/: george_sand_analysis.md
Authors_Stylometric_Signatures/georges_bernanos/: georges_bernanos_analysis.md
Authors_Stylometric_Signatures/gustave_flaubert/: gustave_flaubert_analysis.md
Authors_Stylometric_Signatures/guy_de_maupassant/: guy_de_maupassant_analysis.md
Authors_Stylometric_Signatures/henri_barbusse/: henri_barbusse_analysis.md
Authors_Stylometric_Signatures/honore_de_balzac/: honore_de_balzac_analysis.md
Authors_Stylometric_Signatures/jules_renard/: jules_renard_analysis.md
Authors_Stylometric_Signatures/jules_valles/: jules_valles_analysis.md
Authors_Stylometric_Signatures/jules_verne/: jules_verne_analysis.md
Authors_Stylometric_Signatures/marcel_proust/: marcel_proust_analysis.md
Authors_Stylometric_Signatures/octave_mirbeau/: octave_mirbeau_analysis.md
Authors_Stylometric_Signatures/paul_bourget/: paul_bourget_analysis.md
Authors_Stylometric_Signatures/paul_feval/: paul_feval_analysis.md
Authors_Stylometric_Signatures/ponson_du_terrail/: ponson_du_terrail_analysis.md
Authors_Stylometric_Signatures/prosper_merimee/: prosper_merimee_analysis.md
Authors_Stylometric_Signatures/roger_martin_du_gard/: roger_martin_du_gard_analysis.md
Authors_Stylometric_Signatures/romain_rolland/: romain_rolland_analysis.md
Authors_Stylometric_Signatures/stendhal/: stendhal_analysis.md
Authors_Stylometric_Signatures/victor_hugo/: victor_hugo_analysis.md
Data/: authors.csv  books.csv  figures.csv  final_authors.csv
Notebooks/: challenging_stylo.ipynb  data-preprocessing.ipynb  data_preprocessing.ipynb  scrapping_text_data.ipynb  stylo_classifier.ipynb  stylometry.ipynb
Scripts/: scrapping_text_data.py
